unpackaged/main/default/objects/Case/fields/Account_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance_Due__c</fullName>
    <description>R153096</description>
    <formula>Account.Balance_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>