unpackaged/main/default/objects/Case/fields/Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount__c</fullName>
    <description>R152701</description>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>