unpackaged/main/default/objects/Case/fields/Adjustment_Description__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Description__c</fullName>
    <description>R152701</description>
    <label>Adjustment Description</label>
    <type>TextArea</type>
</CustomField>