unpackaged/main/default/objects/Case/fields/Adjustment_From__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_From__c</fullName>
    <description>R152701</description>
    <label>Adjustment From</label>
    <type>Date</type>
</CustomField>