unpackaged/main/default/objects/Case/fields/Adjustment_To__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_To__c</fullName>
    <description>R152701</description>
    <label>Adjustment To:</label>
    <type>Date</type>
</CustomField>