unpackaged/main/default/objects/Case/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>Assigned</label>
    <type>DateTime</type>
</CustomField>