unpackaged/main/default/objects/Case/fields/Browser__c.field-meta.xml
<CustomField>
    <fullName>Browser__c</fullName>
    <label>Browser</label>
    <length>30</length>
    <type>Text</type>
</CustomField>