unpackaged/main/default/objects/Case/fields/Bug_Number__c.field-meta.xml
<CustomField>
    <fullName>Bug_Number__c</fullName>
    <label>Bug Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>