unpackaged/main/default/objects/Case/fields/Bug_Status__c.field-meta.xml
<CustomField>
    <fullName>Bug_Status__c</fullName>
    <description>R1812440</description>
    <label>Bug Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filed</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>