unpackaged/main/default/objects/Case/fields/Case_Close_Comments__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Comments__c</fullName>
    <description>Created for R1916629</description>
    <label>Case Close Comments</label>
    <type>TextArea</type>
</CustomField>