unpackaged/main/default/objects/Case/fields/Case_Closed_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used with workflow &quot;PM Case Close Notification&quot; so that we only send notification once.</description>
    <label>Case Closed Notification Sent</label>
    <type>Checkbox</type>
</CustomField>