unpackaged/main/default/objects/Case/fields/Case_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date__c</fullName>
    <description>R164782 - Needed for date filter on case auto-response rule</description>
    <formula>DATEVALUE( CreatedDate)</formula>
    <label>Case Created Date</label>
    <type>Date</type>
</CustomField>