unpackaged/main/default/objects/Case/fields/Case_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Case_Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-set to TRUE if MyCase Support case is created in a status of Escalated</description>
    <label>Case Escalation</label>
    <type>Checkbox</type>
</CustomField>