unpackaged/main/default/objects/Case/fields/Case_Reason_DM__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_DM__c</fullName>
    <label>Case Reason DM</label>
    <type>TextArea</type>
</CustomField>