unpackaged/main/default/objects/Case/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <description>What form of communication primarily used to resolve the case?</description>
    <label>Case Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin/Duplicate</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Copy of Report</fullName>
            </value>
            <value>
                <fullName>Data Migration Request Complete</fullName>
            </value>
            <value>
                <fullName>Documents Received</fullName>
            </value>
            <value>
                <fullName>E-Mail</fullName>
            </value>
            <value>
                <fullName>Email: Elaborate explanation</fullName>
            </value>
            <value>
                <fullName>Email: Quick confirmation</fullName>
            </value>
            <value>
                <fullName>Hang up / No Vmail</fullName>
            </value>
            <value>
                <fullName>Help Article</fullName>
            </value>
            <value>
                <fullName>Investigated with CIC</fullName>
            </value>
            <value>
                <fullName>Investigated with CIC &amp; Experian</fullName>
            </value>
            <value>
                <fullName>Investigated with CL</fullName>
            </value>
            <value>
                <fullName>Investigated with CL and Experian</fullName>
            </value>
            <value>
                <fullName>Investigated with Experian</fullName>
            </value>
            <value>
                <fullName>Investigated with RentBureau</fullName>
            </value>
            <value>
                <fullName>Issue Entered as Bug</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Notified CR</fullName>
            </value>
            <value>
                <fullName>Notified V+ Support</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Phone: Elaborate explanation</fullName>
            </value>
            <value>
                <fullName>Phone: Left voicemail or message for contact&#39;</fullName>
            </value>
            <value>
                <fullName>Phone: Quick confirmation</fullName>
            </value>
            <value>
                <fullName>Post/Mail</fullName>
            </value>
            <value>
                <fullName>Provided Solution from Self-Knowledge</fullName>
            </value>
            <value>
                <fullName>Provided Solution from Tech / Dev</fullName>
            </value>
            <value>
                <fullName>Provided Solution in Solution Database</fullName>
            </value>
            <value>
                <fullName>Quick Response Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>