unpackaged/main/default/objects/Case/fields/Close_Case_Sulono_Chat__c.field-meta.xml
<CustomField>
    <fullName>Close_Case_Sulono_Chat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used on Soluno chat to trigger flow to close case.</description>
    <label>Close Case</label>
    <type>Checkbox</type>
</CustomField>