unpackaged/main/default/objects/Case/fields/Confirmed_Bug__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Bug__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>Confirmed Bug</label>
    <type>DateTime</type>
</CustomField>