unpackaged/main/default/objects/Case/fields/Consumer_Inquiry_Type__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Inquiry_Type__c</fullName>
    <description>Updated R166234</description>
    <label>Inquiry Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copy of Report</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Credit Dispute</fullName>
            </value>
            <value>
                <fullName>Credit Inquiry</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>Criminal Dispute</fullName>
            </value>
            <value>
                <fullName>Criminal Inquiry</fullName>
            </value>
            <value>
                <fullName>Eviction</fullName>
            </value>
            <value>
                <fullName>Eviction Dispute</fullName>
            </value>
            <value>
                <fullName>Expungement Order Request</fullName>
            </value>
            <value>
                <fullName>File Disclosure</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>ID Theft</fullName>
            </value>
            <value>
                <fullName>Missed Criminal</fullName>
            </value>
            <value>
                <fullName>Missed Eviction</fullName>
            </value>
            <value>
                <fullName>Permissible Purpose</fullName>
            </value>
            <value>
                <fullName>RentBureau</fullName>
            </value>
            <value>
                <fullName>Subpoena Debt Collection Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>