unpackaged/main/default/objects/Case/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <description>Address for the Contact associated with this Case; modified FLS for R1916190</description>
    <label>Contact Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>