unpackaged/main/default/objects/Case/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>The email address for the contact associated with this Case</description>
    <inlineHelpText>Email address for the Contact</inlineHelpText>
    <label>Webform Contact Email</label>
    <type>Email</type>
</CustomField>