unpackaged/main/default/objects/Case/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>The phone number of the contact associated with this Case</description>
    <inlineHelpText>Phone number of the contact for this Case</inlineHelpText>
    <label>Webform Contact Phone</label>
    <type>Phone</type>
</CustomField>