unpackaged/main/default/objects/Case/fields/Contract_Case__c.field-meta.xml
<CustomField>
    <fullName>Contract_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1810690</description>
    <label>Contract Case</label>
    <type>Checkbox</type>
</CustomField>