unpackaged/main/default/objects/Case/fields/CS_Lead__c.field-meta.xml
<CustomField>
    <fullName>CS_Lead__c</fullName>
    <description>R1812536</description>
    <label>CS Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Training 101</fullName>
            </value>
            <value>
                <fullName>Training Billing &amp; Invoicing</fullName>
            </value>
            <value>
                <fullName>Training Doc Automation</fullName>
            </value>
            <value>
                <fullName>Training Workflow</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>