unpackaged/main/default/objects/Case/fields/Date_Created_Override__c.field-meta.xml
<CustomField>
    <fullName>Date_Created_Override__c</fullName>
    <description>Temporary field to be used for Get Well project reporting purposes.</description>
    <label>Date Created Override</label>
    <type>DateTime</type>
</CustomField>