unpackaged/main/default/objects/Case/fields/Date_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated__c</fullName>
    <description>R177374</description>
    <label>Date Escalated</label>
    <type>Date</type>
</CustomField>