unpackaged/main/default/objects/Case/fields/Days_Since_Most_Recent_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Most_Recent_Activity__c</fullName>
    <formula>IF(ISNULL(Last_Activity_Date__c) &amp;&amp; ISNULL(Last_Case_Comment_Date__c), Today() - DATEVALUE(LastModifiedDate), 
IF(ISNULL(Last_Activity_Date__c),MIN(Today() - DATEVALUE(LastModifiedDate), Today() - Last_Case_Comment_Date__c ),
IF(ISNULL(Last_Case_Comment_Date__c), MIN(Today() - Last_Activity_Date__c,Today() - DATEVALUE(LastModifiedDate)),
MIN(Today() - Last_Activity_Date__c,Today() - DATEVALUE(LastModifiedDate), Today() - Last_Case_Comment_Date__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Most Recent Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>