unpackaged/main/default/objects/Case/fields/DelegatedAt__c.field-meta.xml
<CustomField>
    <fullName>DelegatedAt__c</fullName>
    <description>Created for R1915932; Automatically set to current time when a case&#39;s Escalation Status changes to Delegated</description>
    <label>DelegatedAt</label>
    <type>DateTime</type>
</CustomField>