unpackaged/main/default/objects/Case/fields/DontAssign__c.field-meta.xml
<CustomField>
    <fullName>DontAssign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if we shouldn&#39;t assign though assignment rules</description>
    <label>DontAssign</label>
    <type>Checkbox</type>
</CustomField>