unpackaged/main/default/objects/Case/fields/Downgrade_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Downgrade_Confirmation_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Modified by a record triggered flow, this checkbox will be updated to true after a Downgrade Confirmation email is sent to the contact. This will help us to not spam the contact if the case is reopened.</description>
    <label>Downgrade Confirmation Sent</label>
    <type>Checkbox</type>
</CustomField>