unpackaged/main/default/objects/Case/fields/Engineering_Classification__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Classification__c</fullName>
    <label>Engineering Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Tenancy</fullName>
            </value>
            <value>
                <fullName>Property/Unit</fullName>
            </value>
            <value>
                <fullName>Work Order</fullName>
            </value>
            <value>
                <fullName>Recurring Transaction</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>