unpackaged/main/default/objects/Case/fields/Escalated_Age__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Age__c</fullName>
    <description>R177374</description>
    <formula>IF(IsClosed = False, TODAY() - Date_Escalated__c, 
IF(IsClosed = True, DATEVALUE(ClosedDate) - Date_Escalated__c,NULL))</formula>
    <label>Escalated Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>