unpackaged/main/default/objects/Case/fields/Escalation_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R1812440;  Modified FLS for R1919025</description>
    <label>Escalation Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>