unpackaged/main/default/objects/Case/fields/Escalation_Description__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Description__c</fullName>
    <description>R1812440</description>
    <label>Escalation Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>