unpackaged/main/default/objects/Case/fields/Escalation_Priority__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1812440</description>
    <label>Escalation Priority</label>
    <type>Checkbox</type>
</CustomField>