unpackaged/main/default/objects/Case/fields/Escalation_Status__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Status__c</fullName>
    <description>R1812440; Modified FLS &amp; added new picklist values for R1919025</description>
    <label>Escalation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Escalated</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Delegated</fullName>
            </value>
            <value>
                <fullName>Waiting on CSM</fullName>
            </value>
            <value>
                <fullName>Confirmed Bug</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>