unpackaged/main/default/objects/Case/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <description>R1812440</description>
    <label>Escalation Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>