unpackaged/main/default/objects/Case/fields/Filed__c.field-meta.xml
<CustomField>
    <fullName>Filed__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>Filed</label>
    <type>DateTime</type>
</CustomField>