unpackaged/main/default/objects/Case/fields/Fixed__c.field-meta.xml
<CustomField>
    <fullName>Fixed__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>Fixed</label>
    <type>DateTime</type>
</CustomField>