unpackaged/main/default/objects/Case/fields/Full_URL__c.field-meta.xml
<CustomField>
    <fullName>Full_URL__c</fullName>
    <label>Full URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>