unpackaged/main/default/objects/Case/fields/Investigating__c.field-meta.xml
<CustomField>
    <fullName>Investigating__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>Investigating</label>
    <type>DateTime</type>
</CustomField>