unpackaged/main/default/objects/Case/fields/Jira_Sync__c.field-meta.xml
<CustomField>
    <fullName>Jira_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked through Salesforce Flow when case should sync to JIRA through workato</description>
    <inlineHelpText>Checked through Salesforce Flow when case should sync to JIRA through workato</inlineHelpText>
    <label>Jira Sync</label>
    <type>Checkbox</type>
</CustomField>