unpackaged/main/default/objects/Case/fields/Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date__c</fullName>
    <description>field added per R151162</description>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>