unpackaged/main/default/objects/Case/fields/Last_Case_Comment_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Case_Comment_Date__c</fullName>
    <description>R164107</description>
    <label>Last Case Comment Date</label>
    <type>Date</type>
</CustomField>