unpackaged/main/default/objects/Case/fields/Level_MyCase_Websites__c.field-meta.xml
<CustomField>
    <fullName>Level_MyCase_Websites__c</fullName>
    <description>R176835</description>
    <inlineHelpText>0 = Admin/Dupe 
1 = 1-10 min 
2 = Up to 1 hour 
3 = More than 1 hour 
4 = On-going, multiple days</inlineHelpText>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>