unpackaged/main/default/objects/Case/fields/Master_User__c.field-meta.xml
<CustomField>
    <fullName>Master_User__c</fullName>
    <formula>Contact.Master_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master User</label>
    <type>Checkbox</type>
</CustomField>