unpackaged/main/default/objects/Case/fields/MyCase_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Legacy_ID__c</fullName>
    <label>MyCase Legacy ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>