unpackaged/main/default/objects/Case/fields/MyCase_Product_Environment__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Product_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MyCase Product Environment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Product_Environment__c.Account__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>Product_Environment__c.Brand__c</field>
            <operation>equals</operation>
            <value>MyCase</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Environment__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>