unpackaged/main/default/objects/Case/fields/MyCase_Promotional_Discount__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Promotional_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when discount applied for the opportunity associated with the billing case is a company promotion and should not be counted against Sales attainment</description>
    <inlineHelpText>Checked when discount applied for the opportunity associated with the billing case is a company promotion and should not be counted against Sales attainment</inlineHelpText>
    <label>MyCase Promotional Discount</label>
    <type>Checkbox</type>
</CustomField>