unpackaged/main/default/objects/Case/fields/MyCase_Send_Close_Notification_Survey__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Send_Close_Notification_Survey__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Created for request R151468</description>
    <label>MyCase Send Close Notification &amp; Survey</label>
    <type>Checkbox</type>
</CustomField>