unpackaged/main/default/objects/Case/fields/MyCase_URL__c.field-meta.xml
<CustomField>
    <fullName>MyCase_URL__c</fullName>
    <formula>IF(MyCase_ID__c = &quot;&quot;, &quot;&quot;,

&quot;https://mycasetrial.lightning.force.com/lightning/r/Case/&quot;&amp;MyCase_ID__c&amp;&quot;/view&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyCase URL</label>
    <type>Text</type>
</CustomField>