unpackaged/main/default/objects/Case/fields/New__c.field-meta.xml
<CustomField>
    <fullName>New__c</fullName>
    <description>R1812440; Updated R1813400</description>
    <label>New</label>
    <type>DateTime</type>
</CustomField>