unpackaged/main/default/objects/Case/fields/Next_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Next_Follow_up__c</fullName>
    <description>R1810458</description>
    <label>Next Follow-up</label>
    <type>Date</type>
</CustomField>