unpackaged/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Field to select product associated with the case</description>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MyCase Payments</fullName>
            </value>
            <value>
                <fullName>MyCase Websites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>