unpackaged/main/default/objects/Case/fields/Property_Management_Account__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Updated R166234</description>
    <label>Secondary Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases_CR</relationshipLabel>
    <relationshipName>Cases_CR</relationshipName>
    <type>Lookup</type>
</CustomField>