unpackaged/main/default/objects/Case/fields/Realignment_Codes__c.field-meta.xml
<CustomField>
    <fullName>Realignment_Codes__c</fullName>
    <description>Updated R1813198</description>
    <label>Realignment Codes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>