unpackaged/main/default/objects/Case/fields/Request_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_By__c</fullName>
    <description>APM; R2026682; Edited by: Users</description>
    <label>Request Submitted By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self (Consumer)</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Legal Representative</fullName>
            </value>
            <value>
                <fullName>Attorney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>