unpackaged/main/default/objects/Case/fields/Resolution_Description__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Description__c</fullName>
    <description>Text field for Soluno for describing resolution.</description>
    <label>Resolution Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>